# bookkeeper

./: .gitignore  LICENSE  README.md  build.py  pyproject.toml
bookkeeper/: __main__.py  bookkeeper.py  simple_client.py
bookkeeper/models/: budget.py  category.py  database.py  expense.py  models.py
bookkeeper/presenter/: presenter.py
bookkeeper/repository/: abstract_repository.py  budget_repository.py  category_repository.py  data.db3  expense_repository.py  memory_repository.py  sqlite_repository.py
bookkeeper/view/: AddUpdateDialog.py  AddUpdateDialog.ui  Budget.py  Budget.ui  Category.py  Category.ui  MainWindow.py  MainWindow.ui  Ui_AddUpdateDialog.py  Ui_Budget.py  Ui_Category.py  Ui_MainWindow.py  Ui_MainWindow.ui  main.ui
tests/test_models/: test_budget.py  test_category.py  test_expense.py
tests/test_repository/: test_abstract_repository.py  test_budget_repository.py  test_memory_repository.py
tests/test_view/: test_AddUpdateDialog.py  test_Budget.py  test_Category.py  test_mainWindow.py
